# rust-wasm-runtime

./: .gitignore  Cargo.toml  README.md
src/: exec.rs  lib.rs  main.rs  parse.rs  wasi.rs
src/exec/: error.rs  instance.rs  memory.rs  mod.rs  operand_stack.rs  runtime.rs  types.rs  wasi.rs
src/exec/memory/: mem_object.rs  mod.rs
src/exec/types/: function_signature.rs  functions.rs  identifier.rs  instruction.rs  mem_arg.rs  mod.rs  value.rs
src/parse/: error.rs  mod.rs  parser.rs  types.rs
