[package]
name = "rust_wasm_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leb128 = "0.2.5"
num_enum = "0.5.6"
thiserror = "1.0.30"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-tree = "0.2.4"

